deployment/003-service.yml
---
# Spring Service

apiVersion: v1
kind: Service
metadata:
  name: spring-svc
  namespace: production
  annotations:
      alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
  labels:
    env: prod
spec:
  selector:
    app: spring
    env: prod
  ports:
    - protocol: "TCP"
      port: 9090
      targetPort: 9090
  type: ClusterIP
