deployment/004-ingress.yaml
---
# Spring ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0bd293f3bd36046fb,subnet-01472ee4becc25f3d
    alb.ingress.kubernetes.io/security-groups: sg-050833d95925a4733
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "10"
    alb.ingress.kubernetes.io/tags: Environment=prod,Project=groww

  name: public-ingress
  namespace: production
  labels:
    app: public-ingress
spec:
  rules:
    - host: spring-groww-nipun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-svc
                port:
                  number: 9090
